--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,700;1,800&display=swap');
 @font-face {
   font-family: 'Alex';
-  src: url('./assets/fonts/Lovely Miles.otf');
+  src: url('../fonts/LovelyMiles.otf');
   font-display: swap;
 }
 
