--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .time-dot {
+    left: -0.5rem;
+  }
+  .time-dot-md {
+    left: calc(50% - 8px);
+  }
+}
