--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -9,5 +9,5 @@
 
 @font-face {
   font-family: 'Caligraphy';
-  src: url('../fonts/StylishCalligraphyDemo-XPZZ.ttf') format('truetype');
+  src: url('../fonts/PlayfairDisplay-VariableFont_wght.ttf') format("truetype");
 }
