--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -28,3 +28,13 @@
     }
   }
 }
+
+@layer components {
+  .btn {
+    @apply px-4 font-medium bg-primary dark:bg-primaryDark flex items-center justify-center rounded-lg py-2 fill-text dark:fill-textDark transition-colors duration-200 hover:bg-primaryDark dark:hover:bg-primary;
+  }
+
+  .btn-icon {
+    @apply grow bg-primary dark:bg-primaryDark flex items-center justify-center rounded-lg py-4 fill-text dark:fill-textDark transition-colors duration-200 hover:bg-primaryDark dark:hover:bg-primary;
+  }
+}
