--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -192,9 +192,26 @@
     @apply border-2 border-error-100 hover:bg-error-200 hover:text-background-50 hover:ring-2 hover:ring-error-200 hover:ring-offset-2 hover:ring-offset-background-50 hover:ring-opacity-20 active:bg-error-200 active:text-background-50 active:ring-2 active:ring-error-200 active:ring-offset-2 active:ring-offset-background-50 active:ring-opacity-20;
   }
 
+  .input {
+    @apply text-text-950 lg:text-base outline-0 text-sm px-4 py-2 rounded-md transition duration-200 border border-gray-300;
+  }
+
+  .input-outline {
+    @apply focus:ring-primary-400 focus:ring-offset-2 focus:ring-offset-background-50 focus:ring-opacity-20 focus:ring-2;
+  }
+
+  .input-outline-error {
+    @apply ring-error-100 ring-2;
+  }
+
+  .input-outline-success {
+    @apply ring-green-500 ring-2;
+  }
+
   .time-dot {
     left: -0.5rem;
   }
+
   .time-dot-md {
     left: calc(50% - 6px);
   }
