feat(home/projects): final design before production

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -148,7 +148,7 @@
   }
 
   p {
-    @apply text-sm md:text-base 2xl:text-lg font-light text-text-900 drop-shadow-md;
+    @apply text-base md:text-lg lg:text-lg font-light text-text-900 drop-shadow-md;
   }
 
   label {
